--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body {
 ul, ol{
     margin-top: 0;
     margin-bottom: 0;
+    list-style: none;
+        padding-left: 0;
+        
 }
 
 .hidden {
